Fixed contrast of see details link

--- a/public/base.css
+++ b/public/base.css
@@ -13,7 +13,7 @@
   --color-bg-dark: #040A0E;
 }
 :root[data-theme='light'] {
-  --color-primary: #006497;
+  --color-primary: #004b71;
   --color-secondary: #EB294C;
   --color-tertiary: #9E9D24;
   --color-quaternary: #689F38;
